Fixed footer logo spacing

--- a/sass/imports/_footer.scss
+++ b/sass/imports/_footer.scss
@@ -63,6 +63,12 @@
       margin-bottom: 2.5rem;
     }
   }
+  
+  .site-logo {
+    &:last-child {
+      margin-bottom: 2.5rem;
+    }
+  }
 
   .site-description {
     margin: 0.5rem 0 2.5rem;
